--- a/네트워크/대칭키&공개키.md
+++ b/네트워크/대칭키&공개키.md
@@ -1,1 +1,50 @@
 ## 대칭키 & 공개키
+
+크게 ***대칭키***와 ***비대칭키***로 나눌 수 있음. <br/>
+암호화, 복호화를 할 때 사용하는 키가 같은지 여부로 나뉨. 
+
+<br/>
+
+> ### 대칭키
+
+키 1개(같은 키, 대칭키)로 암호화, 복호화를 함. <br/>
+따라서, 수신자에게 키를 전달해야하는데, 암호문을 전달하는 경로와는 다른 경로로 대칭키를 안전하게 전달해야 함. <br/>
+어떻게 대칭키를 전달하느냐가 중요. 적절한 대칭키 교환 방법이 필요함.
+
+<br/>
+
+**전달** : 평문 - 키(대칭키)로 암호화 - 암호문 <br/>
+**수신** : 암호문 - 키(대칭키)로 복호화 - 평문
+
+<br/>
+
+> ### 비대칭키 
+
+암호화, 복호화 하는 키가 다름. (키 2개) <br/>
+공개키(public key), 개인키(private key) <br/>
+
+**공개키**는 누구나 볼 수 있음. <br/>
+**개인키**는 본인만 알고 있음. <br/>
+<br/>
+ 
+**전달** : 평문 - ***수신자(상대방)의 공개키***로 암호화 - 암호문 <br/>
+**수신** : 암호문 - ***본인의 개인키***로 복호화 - 평문 <br/>
+
+또는
+
+**전달** : 평문 - ***본인의 개인키***로 암호화 - 암호문 <br/>
+**수신** : 암호문 - ***전달자(상대방)의 공개키***로 복호화 - 평문 <br/>
+
+<br/>
+
+전자의 경우, ***data 보안***에 중점을 두고, <br/>
+후자의 경우, ***인증 과정***에 중점을 둔다. 
+
+<br/>
+
+**후자 설명** <br/>
+private key를 가지고 있는 사람이 private key로 data를 암호화하고, public key와 함께 전달한다. <br/>
+public key와 data를 받은 사람은 복호화가 가능하다. <br/>
+data의 보안의 목적보다 ***data 제공자의 신원을 보장***하기 때문에 사용하는 방법이다. <br/> 
+<br/>
+사용되는 경우: 전자서명(공인인증체계)  
