1회차_대칭키&공개키

--- a/네트워크/대칭키&공개키.md
+++ b/네트워크/대칭키&공개키.md
@@ -3,13 +3,12 @@
 크게 ***대칭키***와 ***비대칭키***로 나눌 수 있음. <br/>
 암호화, 복호화를 할 때 사용하는 키가 같은지 여부로 나뉨. 
 
-<br/>
 
-> ### 대칭키
+### 대칭키
 
-키 1개(같은 키, 대칭키)로 암호화, 복호화를 함. <br/>
-따라서, 수신자에게 키를 전달해야하는데, 암호문을 전달하는 경로와는 다른 경로로 대칭키를 안전하게 전달해야 함. <br/>
-어떻게 대칭키를 전달하느냐가 중요. 적절한 대칭키 교환 방법이 필요함.
+> 키 1개(같은 키, 대칭키)로 암호화, 복호화를 함. <br/>
+> 따라서, 수신자에게 키를 전달해야하는데, 암호문을 전달하는 경로와는 다른 경로로 대칭키를 안전하게 전달해야 함. <br/>
+> 어떻게 대칭키를 전달하느냐가 중요. 적절한 대칭키 교환 방법이 필요함.
 
 <br/>
 
@@ -18,10 +17,10 @@
 
 <br/>
 
-> ### 비대칭키 
+### 비대칭키 
 
-암호화, 복호화 하는 키가 다름. (키 2개) <br/>
-공개키(public key), 개인키(private key) <br/>
+> 암호화, 복호화 하는 키가 다름. (키 2개) <br/>
+> 공개키(public key), 개인키(private key) <br/>
 
 **공개키**는 누구나 볼 수 있음. <br/>
 **개인키**는 본인만 알고 있음. <br/>
@@ -48,3 +47,8 @@ public key와 data를 받은 사람은 복호화가 가능하다. <br/>
 data의 보안의 목적보다 ***data 제공자의 신원을 보장***하기 때문에 사용하는 방법이다. <br/> 
 <br/>
 사용되는 경우: 전자서명(공인인증체계)  
+
+
+<br/>
+[참고사이트] <br/>
+https://blog.naver.com/PostView.naver?blogId=chodahi&logNo=221385524980
