4회차_디자인패턴

--- a/디자인패턴/디자인패턴.md
+++ b/디자인패턴/디자인패턴.md
@@ -1,4 +1,13 @@
 # 디자인패턴
+- [생성패턴](#생성패턴) 
+	- [싱글톤 패턴](#1-싱글톤-패턴)
+	- [팩토리 메서드 패턴](#2-팩토리-메서드-패턴)
+	- [추상 메서드 패턴](#3-추상-팩토리-패턴)
+	- [빌더 패턴](#4-빌더-패턴)
+- 구조패턴
+- 행위패턴
+
+<p align="center"><img width="700" alt="스크린샷 2023-03-24 오전 11 20 51" src="https://user-images.githubusercontent.com/29995318/227421948-1fbd237f-fb68-4cf9-90db-aea4bb3172e7.png"></p>
 
 ## 개요
 
