--- a/디자인패턴/디자인패턴_생성패턴.md
+++ b/디자인패턴/디자인패턴_생성패턴.md
@@ -2,7 +2,7 @@
 - [생성패턴](#생성패턴) 
 	- [싱글톤 패턴](#1-싱글톤-패턴)
 	- [팩토리 메서드 패턴](#2-팩토리-메서드-패턴)
-	- [추상 메서드 패턴](#3-추상-팩토리-패턴)
+	- [추상 팩토리 패턴](#3-추상-팩토리-패턴)
 	- [빌더 패턴](#4-빌더-패턴)
 - 구조패턴
 - 행위패턴
