4회차_디자인패턴_생성패턴

--- a/디자인패턴/디자인패턴_생성패턴.md
+++ b/디자인패턴/디자인패턴_생성패턴.md
@@ -196,7 +196,7 @@ public class NotebookFactory {
 public class ClassA {
     public Notebook createNotebook(String type){
         NotebookFactory factory = new NotebookFactory();
-        Notebook notebook = factory.createType(type);
+        Notebook notebook = factory.createNotebook(type);
 
         return notebook;
     }
