5회차_디자인패턴_구조패턴

--- a/디자인패턴/디자인패턴_구조패턴.md
+++ b/디자인패턴/디자인패턴_구조패턴.md
@@ -52,32 +52,32 @@
 1. Client는 Target 인터페이스를 통해 Adaptee를 사용하고자 한다. 
 ```java
 interface Target {
-  Response request();
+    Response request();
 }
 ```
 
 2. Adaptee는 이미 개발이 완료되어있고, 수정하기 곤란한 상황이다. 
 ```java
 class Adaptee {
-  Response specificRequest() {
-    return new Response();
-  }
+    Response specificRequest() {
+      return new Response();
+    }
 }
 ```
 
 3. Adapter 클래스의 request()는 Adaptee의 specificRequest()를 감싸고 있으며, Target 인터페이스를 구현한다. 
 ```java
 class Adapter implements Target {
-  private final Adaptee adaptee;
+    private final Adaptee adaptee;
 
-  public Adapter(Adaptee adaptee) {
-    this.adaptee = adaptee;
-  }
+    public Adapter(Adaptee adaptee) {
+      this.adaptee = adaptee;
+    }
 
-  @Override
-  public Response request() {
-    return this.adaptee.specificRequest();
-  }
+    @Override
+    public Response request() {
+      return this.adaptee.specificRequest();
+    }
 }
 ```
 
@@ -110,19 +110,20 @@ Target target = new Adapter(adaptee)
 // 오리를 표현한 인터페이스와 클래스
 
 interface Duck {
-  public void quack();  // 오리는 꽉꽉 소리를 낸다
-  public void fly();
+    public void quack();  // 오리는 꽉꽉 소리를 낸다
+    public void fly();
 }
 
 class MallardDuck implements Duck {
-  @Override
-  public void quack() {
-    System.out.println("Quack");
-  }
-  @Override
-  public void fly() {
-    System.out.println("I'm flying");
-  }
+    @Override
+    public void quack() {
+        System.out.println("Quack")
+    }
+    
+    @Override
+    public void fly() {
+      System.out.println("I'm flying");
+    }
 }
 ```
 
@@ -131,19 +132,19 @@ class MallardDuck implements Duck {
 // 두 새의 인터페이스가 다르다
 
 interface Turkey {
-  public void gobble();   // 칠면조는 골골거리는 소리를 낸다
-  public void fly();
+    public void gobble();   // 칠면조는 골골거리는 소리를 낸다
+    public void fly();
 }
 
 class WildTurkey implements Turkey {
-  @Override
-  public void gobble() {
-    System.out.println("Gobble gobble");
-  }
-  @Override
-  public void fly() {
-    System.out.println("I'm flying a short distance");
-  }
+    @Override
+    public void gobble() {
+        System.out.println("Gobble gobble");
+    }
+    @Override
+    public void fly() {
+        System.out.println("I'm flying a short distance");
+    }
 }
 ```
 
@@ -154,11 +155,11 @@ class Client {
     private Duck duck;
     
     public Client(Duck duck) {
-    	this.duck = duck;
+    	  this.duck = duck;
     }
     
     public void doWork() {
-    	duck.gobble();
+    	  duck.gobble();
         duck.fly();
     }
 }
@@ -183,24 +184,24 @@ public class AdapterDemo {
 // 어댑터를 구현하여 사용하면 된다.
 
 class TurkeyAdapter implements Duck {
-  Turkey turkey;
+    Turkey turkey;
 
-  public TurkeyAdapter(Turkey turkey) {
-    this.turkey = turkey;
-  }
-  
-  @Override
-  public void quack() {
-    turkey.gobble();
-  }
-  
-  @Override
-  public void fly() {
-    // 칠면조는 멀리 날지 못하므로 다섯 번 날아서 오리처럼 긴 거리를 날게 한다
-    for (int i = 0; i < 5; i++) {
-      turkey.fly();
+    public TurkeyAdapter(Turkey turkey) {
+        this.turkey = turkey;
     }
-  }
+  
+    @Override
+    public void quack() {
+        turkey.gobble();
+    }
+  
+    @Override
+    public void fly() {
+        // 칠면조는 멀리 날지 못하므로 다섯 번 날아서 오리처럼 긴 거리를 날게 한다
+        for (int i = 0; i < 5; i++) {
+            turkey.fly();
+        }
+    }
 }
 ```
 
@@ -263,19 +264,19 @@ public class AdapterDemo {
 
 ```java:Shape.java
 public abstract class Shape {
-  private Drawing drawing;
+    private Drawing drawing;
   
-  protected Shape(Drawing drawing) {
-    this.drawing = drawing;
-  }
+    protected Shape(Drawing drawing) {
+      this.drawing = drawing;
+    }
   
-  public abstract void draw();
-  public void drawLine(int x, int y) {
-    drawing.drawLine(x, y);
-  }
-  public void fill() {
-    drawing.fill();
-  }
+    public abstract void draw();
+    public void drawLine(int x, int y) {
+        drawing.drawLine(x, y);
+    }
+    public void fill() {
+        drawing.fill();
+    }
 }
 ```
 
@@ -284,27 +285,27 @@ public abstract class Shape {
 - **RefinedAbstraction**: Reactangle, Circle 클래스 (extends)
 ```java:Rectangle.java
 public class Rectangle extends Shape{
-  protected Rectangle(Drawing drawing) {
-    super(drawing);
-  }
+    protected Rectangle(Drawing drawing) {
+        super(drawing);
+    }
  
-  @Override
-  public void draw() {
-    System.out.println("Rect draw extend");
-  }
+    @Override
+    public void draw() {
+        System.out.println("Rect draw extend");
+    }
 }
 ```
 
 ```java:Circle.java
 public class Circle extends Shape{
-  protected Circle(Drawing drawing) {
-    super(drawing);
-  }
+    protected Circle(Drawing drawing) {
+        super(drawing);
+    }
  
-  @Override
-  public void draw() {
-    System.out.println("Rect draw extend");
-  }
+    @Override
+    public void draw() {
+        System.out.println("Rect draw extend");
+    }
 }
 ```
 
@@ -313,8 +314,8 @@ public class Circle extends Shape{
 - **Implementor**: Drawing 인터페이스 (기능 구현을 위한 인터페이스 정의)
 ```java:Drawing.java
 public interface Drawing {
-  public void drawLine(int x, int y);
-  public void fill();
+    public void drawLine(int x, int y);
+    public void fill();
 }
 ```
 
@@ -323,29 +324,29 @@ public interface Drawing {
 - **ConcreateImplementor**: RectDrawing, CircleDrawing 클래스 (실제 기능 구현)
 ```java:RectDrawing.java
 public class RectDrawing implements Drawing{
-  @Override
-  public void drawLine(int x, int y) {
-    System.out.println("Rect Draw line from " + x + " to " + y);
-  }
+    @Override
+    public void drawLine(int x, int y) {
+        System.out.println("Rect Draw line from " + x + " to " + y);
+    }
   
-  @Override
-  public void fill() {
-    System.out.println("Rect Fill!");
-  }
+    @Override
+    public void fill() {
+        System.out.println("Rect Fill!");
+    }
 }
 ```
 
 ```java:CircleDrawing.java
 public class CircleDrawing implements Drawing{
-  @Override
-  public void drawLine(int x, int y) {
-    System.out.println("Circle Draw line from " + x + " to " + y);
-  }
+    @Override
+    public void drawLine(int x, int y) {
+        System.out.println("Circle Draw line from " + x + " to " + y);
+    }
   
-  @Override
-  public void fill() {
-    System.out.println("Circle Fill!");
-  }
+    @Override
+    public void fill() {
+        System.out.println("Circle Fill!");
+    }
 }
 ```
 
@@ -354,20 +355,20 @@ public class CircleDrawing implements Drawing{
 - **Main**
 ```java:BridgeMain.java
 public class BridgeMain {
-  public static void main(String[] args) {
-    Shape rectangle = new Rectangle(new RectDrawing());
-    Shape circle = new Circle(new CircleDrawing());
+    public static void main(String[] args) {
+        Shape rectangle = new Rectangle(new RectDrawing());
+        Shape circle = new Circle(new CircleDrawing());
     
-    rectangle.drawLine(1, 2);
-    rectangle.fill();
-    rectangle.draw();
+        rectangle.drawLine(1, 2);
+        rectangle.fill();
+        rectangle.draw();
     
-    System.out.println();
+        System.out.println();
     
-    circle.drawLine(3, 4);
-    circle.fill();
-    circle.draw();
-  }
+        circle.drawLine(3, 4);
+        circle.fill();
+        circle.draw();
+    }
 }
 ```
 
