6회차_객체지향프로그래밍

--- a/소프트웨어/객체 지향 프로그래밍.md
+++ b/소프트웨어/객체 지향 프로그래밍.md
@@ -1,2 +1,131 @@
-# 객체 지향 프로그래밍
+# 객체 지향 프로그래밍(Object Oriendted Programming)
 
+<br>
+
+## 객체 지향 프로그래밍이란?
+
+
+> 여러 개의 독립된 객체들과 그 객체들 간의 상호작용을 이용한 프로그래밍
+
+<br>
+
+실생활에서 쓰는 모든 것을 ***객체***라 하며, ***객체 지향 프로그래밍***은 프로그램 구현에 필요한 객체를 파악하고 각각의 객체들의 역할이 무엇인지를 정의하여 객체들 간의 상호작용을 통해 프로그램을 만드는 것이다.   
+객체는 클래스라는 틀에서 생겨난 실체(instance)이다. 따라서 객체 지향 프로그램은 객체와 객체 간의 연결로 되어 있으며 각각의 객체 안에 자료구조와 알고리즘이 들어있다.
+
+<br>
+
+## 절차 지향과 객체 지향
+
+![img](https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=https%3A%2F%2Ft1.daumcdn.net%2Fcfile%2Ftistory%2F998992425B3768AA23)
+
+
+<br>
+
+## 절차 지향
+
+절차 지향 모델링은 프로그램을 ***기능***중심으로 바라보는 방식으로 <U>"무엇을 어떤 절차로 할 것인가?"</U>가 핵심이 된다. 즉, 어떤 기능을 어떤 순서로 처리하는가에 초점을 맞춘다.
+
+<br>
+
+## 객체 지향
+객체 지향 모델링은 기능이 아닌 ***객체***가 중심이 되며 <U>"누가 어떤 일을 할 것인가?"</U>가 핵심이 된다. 즉, 객체를 도출하고 각각의 역할을 정의해 나가는 것에 초점을 맞춘다.
+
+<br>
+
+## 객체 지향 프로그래밍의 기본 구성 요소
+
+![img](https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=https%3A%2F%2Fblog.kakaocdn.net%2Fdn%2FchH1CQ%2Fbtrp55RgLk4%2FB5LFxkHKOjWFwkOOvBuKt0%2Fimg.png)
+- 클래스 (Class)   
+  - 객체를 정의하는 틀, 혹은 설계도
+  - 같은 종류의 집단에 속하는 속성과 행위를 정의한 것,
+  - 다른 클래스와 독립적으로 디자인해야한다.
+- 객체 (Object)
+  - 클래스의 인스턴스이며, 속성과 행위(메서드)를 가진 객체 지향 프로그램의 기본단위
+  - 프로그램에서 구현할 대상
+- 메서드 (Method)
+  - 클래스로부터 생성된 객체를 사용하는 방법이며, 
+  - 객체의 속성을 조작하는데에 사용된다.
+
+<br>
+
+## 객체 지향 프로그래밍의 4가지 핵심 개념
+1. 추상화 (Abstraction)    
+- 현실의 사물들을 객체라 생각하고 상태, 행위 등 객체의 특징(기능, 속성)을 선별하여 프로그래밍하는 것   
+- 이름 잘 짓고, 문서화 잘하기  
+- 구조를 상세히 몰라도, 클래스나 메서드, 변수들의 이름만으로 파악할 수 있어야 한다.   
+![img](https://gmlwjd9405.github.io/images/oop-features/abstract.png)
+2. 캡슐화 (Encapsulation)   
+- 외부로부터의 직접적인 액세스 차단한다. 
+- 속성과 이 속성을 사용하는 행동을 하나로 묶어야 한다. (객체를 사용할 땐 메서드를 사용)      
+- 실제 구현 내용을 외부로부터 알 수없게 하고(은닉화), 데이터의 구조와 역할, 기능을 하나의 캡슐형태로 만드는 방법
+![img](https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=https%3A%2F%2Fblog.kakaocdn.net%2Fdn%2Fd995jb%2FbtqvtPH0URr%2Fg8ABTOlGcMdiUk3r4Bk3K0%2Fimg.jpg)   
+3. 상속(Inheritance)
+- 하나의 클래스가 가진 특징(함수, 데이터)을 다른 클래스가 그대로 물려받는 것   
+- 이미 작성된 클래스를 받아서 새로운 클래스를 생성하는 것
+- 기존 코드를 재활용해서 사용함으로써 객체지향 방법의 중요한 기능 중 하나
+![img](https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=https%3A%2F%2Fblog.kakaocdn.net%2Fdn%2F67akc%2FbtqvrVW1odm%2FNKC9OCRnH2IkKrOMntKo50%2Fimg.jpg)
+4. 다형성 (Polymophism)   
+- 하나의 클래스가 다양하게 쓰이는 것       
+- 약간 다른 방법으로 동작하는 함수를 동일한 이름으로 호출하는 것   
+- 동일한 명령의 해석을 연결된 객체에 의존하는 것(같은 메서드를 호출해도 객체에 따라 내용이 달라지는 개념)   
+![img](https://i0.wp.com/blog.codestates.com/wp-content/uploads/2022/11/%EA%B0%9D%EC%B2%B4-%EC%A7%80%ED%96%A5-%ED%94%84%EB%A1%9C%EA%B7%B8%EB%9E%98%EB%B0%8D-%EB%8B%A4%ED%98%95%EC%84%B1.png?w=800&ssl=1)
+- ex) 오버로딩(overloading), 오버라이딩(overriding)   
+  - 오버로딩 (overloading) - 같은이름의 함수를 매개변수의 타입, 갯수를 다르게하여 재정의한 것   
+  - 오버라이딩 (overriding) - 부모클래스에서 정의한 메서드와 같은 이름, 같은 매개변수를 갖는 메서드를 자식클래스에서 재정의한 것   
+
+<br>
+
+## 객체 간의 관계
+객체는 단독으로 존재할 수 있지만 대부분 다른 객체와 관계를 맺고 있다.   
+관계의 종류에는 집합 관계, 사용 관계, 상속 관계가 있다.
+
+1. 집합 관계
+
+    - 완성품과 부품의 관계를 말한다. 예를 들어 자동차는 엔진, 타이어, 핸들 등으로 구성되므로 자동차와 부품들은 집합 관계라고 볼 수 있다.   
+
+2. 사용 관계
+
+    - 다른 객체의 필드를 읽고 변경하거나 메소드를 호출하는 관계를 말한다. 예를 들어 사람이 자동차에게 달린다, 멈춘다 등의 메소드를 호출하면 사람과 자동차는 사용 관계라고 볼 수 있다.   
+
+3. 상속 관계
+
+    - 부모와 자식 관계를 말한다. 자동차가 기계의 특징(필드, 메소드)을 물려받는다면 기계(부모)와 자동차(자식)는 상속 관계에 있다고 볼 수 있다.   
+
+<br>
+
+## 객체 지향 프로그래밍의 장점과 단점   
+
+- 장점
+  - 코드의 재사용이 용이하다
+  - 유지보수 및 업그레이드가 쉽다.
+  - 대형 프로젝트에 효과적이다.
+  - 직관적인 코드 분석을 가능하게 한다.  
+  - 보안성이 높다.   
+<br>
+
+- 단점
+  - 처리속도가 느리다.
+  - 객체가 많아질수록 용량이 커진다.
+  - 설계 시 시간과 노력이 많이 필요하다.
+
+<br>
+
+## 객체 지향 언어
+
+> IT관련 객체 지향 프로그래밍에서 사용하는 언어로서,  
+객체를 만들고 조작하며 객체끼리 관계를 맺음으로써 다수의 객체가 함께 수행될 수 있게 한다.
+
+<br>
+ ex) JAVA, C++, C#, Python, 시뮬라67, 비주얼 베이직 닷넷...
+
+<br>
+객체지향언어가 인기를 얻은 이후에 기존의 프로그래밍 언어들이 객체지향의 요소를 추가하거나 확장하는 형태가 만들어지게 되었다.
+
+<br>
+<br>
+<br>
+
+참고   
+https://github.com/Songwonseok/CS-Study/blob/main/CommonSense/%EA%B0%9D%EC%B2%B4%20%EC%A7%80%ED%96%A5%20%ED%94%84%EB%A1%9C%EA%B7%B8%EB%9E%98%EB%B0%8D.md   
+https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=https%3A%2F%2Ft1.daumcdn.net%2Fcfile%2Ftistory%2F998992425B3768AA23   
+http://www.incodom.kr/%EA%B0%9D%EC%B2%B4_%EC%A7%80%ED%96%A5#h_6c44ebae9d828428c5a51a0e5235aa96
